--- a/django-rbac/pyproject.toml
+++ b/django-rbac/pyproject.toml
@@ -11,6 +11,8 @@ django = "^5.2.4"
 python-dotenv = "1.0.0"
 djangorestframework = "^3.16.0"
 djangorestframework-simplejwt = "^5.5.0"
+drf-spectacular = "^0.28.0"
+drf-spectacular-sidecar = "^2025.7.1"
 
 
 [build-system]
