--- a/django-rbac/pyproject.toml
+++ b/django-rbac/pyproject.toml
@@ -13,6 +13,7 @@ djangorestframework = "^3.16.0"
 djangorestframework-simplejwt = "^5.5.0"
 drf-spectacular = "^0.28.0"
 drf-spectacular-sidecar = "^2025.7.1"
+django-simple-history = "^3.10.1"
 
 
 [build-system]
