feat(rbac): support custom password change actions
- Added ChangeOwnPasswordView for users to update their own password
- Added ChangePasswordView for admins/roles to update any user's password
- Extended AutoPermissionMixin with permission_code_map for custom RBAC
  actions

--- a/django-rbac/rbac/fixtures/permissions_config.json
+++ b/django-rbac/rbac/fixtures/permissions_config.json
@@ -5,7 +5,7 @@
     {"code": "user.create", "label": "Create a user"},
     {"code": "user.update", "label": "Update a user"},
     {"code": "user.delete", "label": "Delete a user"},
-    {"code": "user.change_password_self", "label": "Change own password"},
+    {"code": "user.change_own_password", "label": "Change own password"},
     {"code": "user.change_password", "label": "Change password of any user"},
     {"code": "user.reset_password", "label": "Reset password of any user"},
     {"code": "user.history.view", "label": "View history of a user"},
@@ -38,7 +38,7 @@
       "name": "USER",
       "description": "Default role for a new user. Can view and edit their own profile.",
       "permissions": [
-        "user.view", "user.update", "user.change_password_self", 
+        "user.view", "user.update", "user.change_own_password", 
         "user.reset_password", "auth.logout"
       ]
     },
@@ -47,7 +47,7 @@
       "description": "Can manage other users, including creating them and viewing the user list.",
       "permissions": [
         "user.list", "user.view", "user.update", "user.create", 
-        "user.change_password_self", "user.reset_password", "auth.logout"
+        "user.change_own_password", "user.reset_password", "auth.logout"
       ]
     }
   ]
