Implement role management via groups and enhance permissions handling
- Added Group model to manage collections of roles.
- Updated AutoPermissionMixin to support custom actions and HTTP methods.
- Integrated group-role-user assignments.
- Seed script updated for initial permissions and roles.
- Note: Some functionality still under development and may not be fully operational.

--- a/django-rbac/rbac/fixtures/permissions_config.json
+++ b/django-rbac/rbac/fixtures/permissions_config.json
@@ -8,12 +8,12 @@
     {"code": "user.change_own_password", "label": "Change own password"},
     {"code": "user.change_password", "label": "Change password of any user"},
     {"code": "user.reset_password", "label": "Reset password of any user"},
-    {"code": "user.history.view", "label": "View history of a user"},
-    {"code": "user.history.view_all", "label": "View all user histories"},
+    
+    {"code": "user_history.view", "label": "View history of a user"},
+    {"code": "user_history.list", "label": "List all user histories"},
+    {"code": "user_roles.view", "label": "View roles of a user"},
+    {"code": "user_roles.update", "label": "Update roles of a user"},
 
-
-    {"code": "user.view_roles", "label": "View roles of a user"},
-    {"code": "user.update_roles", "label": "Update roles of a user"},
 
     {"code": "permission.list", "label": "List all permissions"},
     {"code": "permission.view", "label": "View a permission"},
@@ -23,10 +23,26 @@
     {"code": "role.view", "label": "View a role"},
     {"code": "role.update", "label": "Update a role"},
     {"code": "role.delete", "label": "Delete a role"},
+    
+    {"code": "group.list", "label": "List all groups"},
+    {"code": "group.create", "label": "Create a group"},
+    {"code": "group.view", "label": "View a group"},
+    {"code": "group.update", "label": "Update a group"},
+    {"code": "group.delete", "label": "Delete a group"},
 
-    {"code": "auth.logout", "label": "Log out"},
+
+    {"code": "role_history.view", "label": "View history of a role"},
+    {"code": "role_history.list", "label": "List all role histories"},
+    {"code": "permission_history.view", "label": "View history of a permission"},
+    {"code": "permission_history.list", "label": "List all permission histories"},
+    {"code": "group_history.view", "label": "View history of a group"},
+    {"code": "group_history.list", "label": "List all group histories"},
+
+
     {"code": "rbac.assign_role", "label": "Assign a role to a user"},
-    {"code": "rbac.remove_role", "label": "Remove a role from a user"}
+    {"code": "rbac.remove_role", "label": "Remove a role from a user"},
+    {"code": "rbac.add_user_group", "label": "Add a user to a group"},
+    {"code": "rbac.remove_user_group", "label": "Remove a user from a group"}
   ],
   "roles": [
     {
@@ -39,15 +55,15 @@
       "description": "Default role for a new user. Can view and edit their own profile.",
       "permissions": [
         "user.view", "user.update", "user.change_own_password", 
-        "user.reset_password", "auth.logout"
+        "user.reset_password"
       ]
     },
     {
       "name": "MANAGER",
       "description": "Can manage other users, including creating them and viewing the user list.",
       "permissions": [
-        "user.list", "user.view", "user.update", "user.create", 
-        "user.change_own_password", "user.reset_password", "auth.logout"
+        "user.list", "user.view", "user.update", "user.create", "rbac.add_user_group", 
+        "rbac.remove_user_group", "user.change_own_password", "user.reset_password"
       ]
     }
   ]
