--- a/django-rbac/rbac/fixtures/permissions_config.json
+++ b/django-rbac/rbac/fixtures/permissions_config.json
@@ -7,6 +7,7 @@
     {"code": "user.delete", "label": "Delete a user"},
     {"code": "user.change_own_password", "label": "Change own password"},
     {"code": "user.change_password", "label": "Change password of any user"},
+    {"code": "user.request_otp", "label": "Request OTP for password reset"},
     {"code": "user.reset_password", "label": "Reset password of any user"},
     
     {"code": "user_history.view", "label": "View history of a user"},
@@ -54,7 +55,7 @@
       "name": "USER",
       "description": "Default role for a new user. Can view and edit their own profile.",
       "permissions": [
-        "user.view", "user.update", "user.change_own_password", 
+        "user.view", "user.update", "user.change_own_password", "user.request_otp",
         "user.reset_password"
       ]
     },
@@ -63,7 +64,7 @@
       "description": "Can manage other users, including creating them and viewing the user list.",
       "permissions": [
         "user.list", "user.view", "user.update", "user.create", "rbac.add_user_group", 
-        "rbac.remove_user_group", "user.change_own_password", "user.reset_password"
+        "rbac.remove_user_group", "user.change_own_password", "user.request_otp", "user.reset_password"
       ]
     }
   ]
